Bug 455943 - cannot run more than one kcmshell5 instance at a time
Summary: cannot run more than one kcmshell5 instance at a time
Status: RESOLVED FIXED
Alias: None
Product: kde-cli-tools
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.25.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-06-26 07:17 UTC by Felix Miata
Modified: 2022-06-28 20:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Miata 2022-06-26 07:17:51 UTC
ORIGINAL SUMMARY
cannot run more than one kcmshell5 instance at a time

STEPS TO REPRODUCE
1. kcmshell5 xserver & in Konsole
2. kcmshell5 fonts & in Konsole
3. kcmshell5 --list

OBSERVED RESULT
1. X-Server window opens
2. kcmshell5 with modules ' "org.kde.kcmshell_" ' is already running.
3. The following modules are available:

EXPECTED RESULT
1. X-Server window opens
2. Fonts window opens
3. a non-empty list of modules is provided

SOFTWARE/OS VERSIONS
openSUSE Tumbleweed 20220624
KDE Plasma Version: 5.25.1
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
1-regression; age unknown
2-I tried also in Fedora 36 with 5.24.5/5.93.0 and got a different failure. Instead of xserver then fonts, because Fedora doesn't seem to provide an xserver module, I used fonts then mouse, with the following result:
> kcmshell5 mouse &
> kf.guiaddons: Could not find a suitable handler for "help:/kcontrol/fonts/index.html"
kf.guiaddons: Could not find a suitable handler for "help:/kcontrol/fonts/index.html"
(no kcm mouse window opened)
3-Tumbleweed 20220517/5.24.5/5.94.0 results match TW20220624
Comment 1 Nate Graham 2022-06-27 18:43:53 UTC
Can reproduce:

$ kcmshell5 kcm_colors
kcmshell5 with modules ' "org.kde.kcmshell_" ' is already running.
Comment 2 Bug Janitor Service 2022-06-28 04:39:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kde-cli-tools/-/merge_requests/41
Comment 3 Alexander Lohnau 2022-06-28 20:15:07 UTC
Git commit 19930486b90187da0d9f6db968c6eb7a2dbb96fe by Alexander Lohnau.
Committed on 28/06/2022 at 04:38.
Pushed by alex into branch 'master'.

Fix DBus name for KPluginMetaData based KCMs
FIXED-IN: 5.25.2

M  +5    -1    kcmshell/main.cpp

https://invent.kde.org/plasma/kde-cli-tools/commit/19930486b90187da0d9f6db968c6eb7a2dbb96fe
Comment 4 Alexander Lohnau 2022-06-28 20:15:24 UTC
Git commit e8ee619cbc410f39a264060f18f771546575d268 by Alexander Lohnau.
Committed on 28/06/2022 at 20:15.
Pushed by alex into branch 'Plasma/5.25'.

Fix DBus name for KPluginMetaData based KCMs
FIXED-IN: 5.25.2


(cherry picked from commit 19930486b90187da0d9f6db968c6eb7a2dbb96fe)

M  +5    -1    kcmshell/main.cpp

https://invent.kde.org/plasma/kde-cli-tools/commit/e8ee619cbc410f39a264060f18f771546575d268
Comment 5 Nate Graham 2022-06-28 20:18:05 UTC
Thanks so much for the quick fix, Alexander!