Fix DBus name for KPluginMetaData based KCMs

BUG: 455943
FIXED-IN: 5.25.2


(cherry picked from commit 19930486b90187da0d9f6db968c6eb7a2dbb96fe)